azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vnetName": {
      "type": "string",
      "defaultValue": "T1RatingAppVNet2",
      "metadata": {
        "description": "VNet name"
      }
    },
    "vnetAddressPrefix": {
      "type": "string",
      "defaultValue": "10.100.0.0/20",
      "metadata": {
        "description": "Address prefix"
      }
    },
    "subnet1Prefix": {
      "type": "string",
      "defaultValue": "10.100.1.0/24",
      "metadata": {
        "description": "Subnet 1 Prefix"
      }
    },
    "subnet1Name": {
      "type": "string",
      "defaultValue": "T1RatingAppSubnet1",
      "metadata": {
        "description": "Subnet 1 Name"
      }
    },
    "subnet2Prefix": {
      "type": "string",
      "defaultValue": "10.100.2.0/24",
      "metadata": {
        "description": "Subnet 2 Prefix"
      }
    },
    "subnet2Name": {
      "type": "string",
      "defaultValue": "T1RatingAppSubnet2",
      "metadata": {
        "description": "Subnet 2 Name"
      }
    },
    "subnet3Prefix": {
      "type": "string",
      "defaultValue": "10.100.3.0/24",
      "metadata": {
        "description": "Subnet 3 Prefix"
      }
    },
    "subnet3Name": {
      "type": "string",
      "defaultValue": "T1RatingAppSubnet3",
      "metadata": {
        "description": "Subnet 3 Name"
      }
    },
    "subnet4Prefix": {
      "type": "string",
      "defaultValue": "10.100.4.0/24",
      "metadata": {
        "description": "Subnet 4 Prefix"
      }
    },
    "subnet4Name": {
      "type": "string",
      "defaultValue": "T1RatingAppSubnet4",
      "metadata": {
        "description": "Subnet 4 Name"
      }
    },
    "subnet5Prefix": {
      "type": "string",
      "defaultValue": "10.100.5.0/24",
      "metadata": {
        "description": "Subnet 2 Prefix"
      }
    },
    "subnet5Name": {
      "type": "string",
      "defaultValue": "T1RatingAppSubnet5",
      "metadata": {
        "description": "Subnet 5 Name"
      }
    },
    "subnet6Prefix": {
      "type": "string",
      "defaultValue": "10.100.6.0/24",
      "metadata": {
        "description": "Subnet 6 Prefix"
      }
    },
    "subnet6Name": {
      "type": "string",
      "defaultValue": "T1RatingAppSubnet6",
      "metadata": {
        "description": "Subnet 6 Name"
      }
    },
    "subnet1nsg": {
      "type": "string",
      "defaultValue": "subnet1nsg",
      "metadata": {
        "description": "Subnet 1 NSG"
      }
    },
    "subnet2nsg": {
      "type": "string",
      "defaultValue": "subnet2nsg",
      "metadata": {
        "description": "Subnet 2 NSG"
      }
    },
    "subnet3nsg": {
      "type": "string",
      "defaultValue": "subnet3nsg",
      "metadata": {
        "description": "Subnet 3 NSG"
      }
    },
    "subnet4nsg": {
      "type": "string",
      "defaultValue": "subnet4nsg",
      "metadata": {
        "description": "Subnet 4 NSG"
      }
    },
    "subnet5nsg": {
      "type": "string",
      "defaultValue": "subnet5nsg",
      "metadata": {
        "description": "Subnet 5 NSG"
      }
    },
    "subnet6nsg": {
      "type": "string",
      "defaultValue": "subnet6nsg",
      "metadata": {
        "description": "Subnet 6 NSG"
      }
    },
    "natGatewayName": {
      "type": "string",
      "defaultValue": "T1RatingAppNatGW2",
      "metadata": {
        "description": "Name of the NAT gateway resource"
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources."
      }
    }
  },
  "variables": {
    "publicIpName": "[format('{0}-pip', parameters('natGatewayName'))]",
    "publicIpAddresses": [
      {
        "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpName'))]"
      }
    ]
  },
  "resources": [
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2020-06-01",
      "name": "[variables('publicIpName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Static",
        "idleTimeoutInMinutes": 4
        // "dnsSettings": {
        //   "domainNameLabel": "[parameters('publicIpDns')]"
        //}
      }
    },
    {
      
      
      "type": "Microsoft.Network/natGateways",
      "apiVersion": "2020-06-01",
      "name": "[parameters('natGatewayName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "idleTimeoutInMinutes": 4,
       "publicIpAddresses": "[variables('publicIpAddresses')]"
        
        
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpName'))]"
      ]
    },
       {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet1nsg')]",
      "location": "[resourceGroup().location]",
  "properties": {
    "securityRules": [
      {
        "name": "rdp-rule",
        "properties": {
          "description": "Allow RDP",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": "3389",
          "sourceAddressPrefix": "Internet",
          "destinationAddressPrefix": "*",
          "access": "Allow",
          "priority": 100,
          "direction": "Inbound"
        }
    
      }
    ]
  }
  },
       {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet2nsg')]",
      "location": "[resourceGroup().location]",
  "properties": {
    "securityRules": [
      {
        "name": "rdp-rule",
        "properties": {
          "description": "Allow RDP",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": "3389",
          "sourceAddressPrefix": "Internet",
          "destinationAddressPrefix": "*",
          "access": "Allow",
          "priority": 100,
          "direction": "Inbound"
        }
    
      }
    ]
  }
  },
       {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet3nsg')]",
      "location": "[resourceGroup().location]",
  "properties": {
    "securityRules": [
      {
        "name": "rdp-rule",
        "properties": {
          "description": "Allow RDP",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": "3389",
          "sourceAddressPrefix": "Internet",
          "destinationAddressPrefix": "*",
          "access": "Allow",
          "priority": 100,
          "direction": "Inbound"
        }
    
      }
    ]
  }
  },
       {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet4nsg')]",
      "location": "[resourceGroup().location]",
  "properties": {
    "securityRules": [
      {
        "name": "rdp-rule",
        "properties": {
          "description": "Allow RDP",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": "3389",
          "sourceAddressPrefix": "Internet",
          "destinationAddressPrefix": "*",
          "access": "Allow",
          "priority": 100,
          "direction": "Inbound"
        }
    
      }
    ]
  }
  },
       {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet5nsg')]",
      "location": "[resourceGroup().location]",
  "properties": {
    "securityRules": [
      {
        "name": "rdp-rule",
        "properties": {
          "description": "Allow RDP",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": "3389",
          "sourceAddressPrefix": "Internet",
          "destinationAddressPrefix": "*",
          "access": "Allow",
          "priority": 100,
          "direction": "Inbound"
        }
    
      }
    ]
  }
  },
       {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('subnet6nsg')]",
      "location": "[resourceGroup().location]",
  "properties": {
    "securityRules": [
      {
        "name": "rdp-rule",
        "properties": {
          "description": "Allow RDP",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": "3389",
          "sourceAddressPrefix": "Internet",
          "destinationAddressPrefix": "*",
          "access": "Allow",
          "priority": 100,
          "direction": "Inbound"
        }
    
      }
    ]
  }
  },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2020-05-01",
      "name": "[parameters('vnetName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/natGateways', parameters('natGatewayName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vnetAddressPrefix')]"
          ]
        }
      },
      "resources": [
        {
          "type": "subnets",
          "apiVersion": "2020-05-01",
          "location": "[parameters('location')]",
          "name": "[parameters('subnet1Name')]",
          "dependsOn": [
            "[parameters('vnetName')]"
          ],
          "properties": {
            "addressPrefix": "[parameters('subnet1Prefix')]",
            "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet1nsg'))]"
            },
            "delegations": [
                    {
                        "name": "Microsoft.Web.serverFarms",
                        "properties": {
                            "serviceName": "Microsoft.Web/serverFarms"
                        }
                    }
                ] 
          }
        },
        {
          "type": "subnets",
          "apiVersion": "2020-05-01",
          "location": "[parameters('location')]",
          "name": "[parameters('subnet2Name')]",
          "dependsOn": [
            "[parameters('vnetName')]",
            "[parameters('subnet1Name')]",
            "[parameters('subnet1nsg')]"
          ],
          "properties": {
            "addressPrefix": "[parameters('subnet2Prefix')]",
            "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet2nsg'))]"
            },
            "natGateway": {
              "id": "[resourceId('Microsoft.Network/natGateways', parameters('natGatewayName'))]"
            }
          }
        },
        {
          "type": "subnets",
          "apiVersion": "2020-05-01",
          "location": "[parameters('location')]",
          "name": "[parameters('subnet3Name')]",
          "dependsOn": [
            "[parameters('vnetName')]",
            "[parameters('subnet2Name')]",
            "[parameters('subnet2nsg')]"
          ],
          "properties": {
            "addressPrefix": "[parameters('subnet3Prefix')]",
            "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet3nsg'))]"
            },
            "natGateway": {
              "id": "[resourceId('Microsoft.Network/natGateways', parameters('natGatewayName'))]"
            }
          }
        },
        {
          "type": "subnets",
          "apiVersion": "2020-05-01",
          "location": "[parameters('location')]",
          "name": "[parameters('subnet4Name')]",
          "dependsOn": [
            "[parameters('vnetName')]",
            "[parameters('subnet3Name')]",
            "[parameters('subnet3nsg')]"
          ],
          "properties": {
            "addressPrefix": "[parameters('subnet4Prefix')]",
            "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet4nsg'))]"
            }
          }
        },
        {
          "type": "subnets",
          "apiVersion": "2020-05-01",
          "location": "[parameters('location')]",
          "name": "[parameters('subnet5Name')]",
          "dependsOn": [
            "[parameters('vnetName')]",
            "[parameters('subnet4Name')]",
            "[parameters('subnet4nsg')]"
          ],
          "properties": {
            "addressPrefix": "[parameters('subnet5Prefix')]",
            "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet5nsg'))]"
            }
          }
        },
        {
          "type": "subnets",
          "apiVersion": "2020-05-01",
          "location": "[parameters('location')]",
          "name": "[parameters('subnet6Name')]",
          "dependsOn": [
            "[parameters('vnetName')]",
            "[parameters('subnet5Name')]",
            "[parameters('subnet5nsg')]"
          ],
          "properties": {
            "addressPrefix": "[parameters('subnet6Prefix')]",
            "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('subnet6nsg'))]"
            }
          }
        }
      ]
    }
  ]
}
